# aimooe_ros2

./: CMakeLists.txt  README.md  package.xml
aimooe_core/: CMakeLists.txt  package.xml
aimooe_core/include/aimooe_core/: aimooe_tracker.hpp
aimooe_core/src/: aimooe_tracker.cpp
aimooe_msgs/: CMakeLists.txt  package.xml
aimooe_msgs/action/: SelfCalibration.action  TipCalibration.action  TipPivot.action  ToolCreation.action
aimooe_msgs/msg/: Tool.msg  ToolArray.msg
aimooe_msgs/srv/: SelfCalibration.srv  TipCalibration.srv  TipPivot.srv  ToolCreation.srv
aimooe_ros2/: CMakeLists.txt  package.xml
aimooe_ros2/config/: tracker_params.yaml
aimooe_ros2/include/aimooe_ros2/: aimooe_tracker_node.hpp
aimooe_ros2/launch/: aimooe_tracker.launch.py
aimooe_ros2/meshes/: tool.stl
aimooe_ros2/src/: aimooe_tracker_node.cpp
aimooe_ros2/tools/: ict.aimtool
include/aimooe_ros2/: AimPositionAPI.h  AimPositionDef.h
launch/: tracker.launch.py
src/: aimooe_tracker_node.cpp
tools/: cal.aimtool  drb.aimtool  tool.aimtool
